--- a/index.html
+++ b/index.html
@@ -1,28 +1,30 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Basic SEO -->
-<meta name="description" content="Open Source Kashmir (OSK) - Building a community of open source enthusiasts in Kashmir.">
-<meta name="keywords" content="Open Source, Kashmir, OSK, Hacktoberfest, Community, Developers">
-<meta name="author" content="Open Source Kashmir">
+        <!-- Basic SEO -->
+    <meta name="description" content="Open Source Kashmir (OSK) - Building a community of open source enthusiasts in Kashmir.">
+    <meta name="keywords" content="Open Source, Kashmir, OSK, Hacktoberfest, Community, Developers">
+    <meta name="author" content="Open Source Kashmir">
 
-<!-- Open Graph -->
-<meta property="og:title" content="Open Source Kashmir (OSK)">
-<meta property="og:description" content="Building a community of open source enthusiasts in Kashmir.">
-<meta property="og:image" content="https://raw.githubusercontent.com/Open-Source-Kashmir/osk/main/public/osk-banner.png">
-<meta property="og:url" content="https://osk-open-source.netlify.app/">
-<meta property="og:type" content="website">
+    <!-- Open Graph -->
+    <meta property="og:title" content="Open Source Kashmir (OSK)">
+    <meta property="og:description" content="Building a community of open source enthusiasts in Kashmir.">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Open-Source-Kashmir/osk/main/public/osk-banner.png">
+    <meta property="og:url" content="https://osk-open-source.netlify.app/">
+    <meta property="og:type" content="website">
 
-<!-- Twitter Card -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Open Source Kashmir (OSK)">
-<meta name="twitter:description" content="Building a community of open source enthusiasts in Kashmir.">
-<meta name="twitter:image" content="https://raw.githubusercontent.com/Open-Source-Kashmir/osk/main/public/osk-banner.png">
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Open Source Kashmir (OSK)">
+    <meta name="twitter:description" content="Building a community of open source enthusiasts in Kashmir.">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/Open-Source-Kashmir/osk/main/public/osk-banner.png">
+    
+    <link rel="icon" href="/public/favicon.png" type="image/x-icon">
 
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>OSK</title>
   </head>
   <body>
     <div id="root"></div>
